@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-30T08:10:50Z",
-  "count" : 3,
-  "count_minmax" : [ 2, 5 ],
-  "count_decinc" : [ -2, +3 ],
+  "timestamp" : "2022-05-30T16:10:41Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 5 ],
+  "count_decinc" : [ -4, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +0 ]
