@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-30T08:10:50Z",
+  "timestamp" : "2022-05-30T16:10:41Z",
   "count_outdated" : 1529,
   "uniques_outdated" : 82,
-  "count" : 1590,
-  "uniques" : 91,
+  "count" : 1592,
+  "uniques" : 92,
   "views" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 5 ],
+      "count": 1,
+      "count_minmax": [ 1, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -65,6 +65,13 @@
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
