@@ -1,10 +1,10 @@
 {
-  "count": 61,
+  "count": 63,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-16T00:00:00Z",
-      "count": 3,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
