@@ -1,3 +1,10 @@
+2022-05-30T16:10:41Z:
+* notice: last 14d: unq all: 1 63
+* notice: prev accum: outdated-unq outdated-all / unq all: 82 1529 / 91 1590
+* notice: next accum: outdated-unq outdated-all / unq all: 82 1529 / 92 1592
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -2 / +1 +4 -0 -0 / 1 4
+* notice: changed dates: [2022-05-16 2022-05-30]
+
 2022-05-30T08:10:50Z:
 * notice: last 14d: unq all: 1 61
 * notice: prev accum: outdated-unq outdated-all / unq all: 82 1529 / 91 1592
